# Memster

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config.yaml
src/: config.rs  main.rs  storage.rs
