[package]
name = "memster"
version = "0.1.0"
authors = ["oskarn <oskarn@spotify.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.5", features = ["full"]}
parking_lot = "0.11"
bytes = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
#TODO full is not needed here 
#hyper = {version = "0.14", features = ["full"]}
warp = "0.3"
tower-http = { version = "0.1", features = ["full"]}
tower = {version =  "0.4.5", features = ["full"]}
url = "0.2"
anyhow = "1"
 
[dev-dependencies]
reqwest = "0.11"
