[package]
name = "memster"
version = "0.1.0"
authors = ["oskarn <oskarn@spotify.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1

[dependencies]
tokio = {version = "1.5", features = ["full"]}
parking_lot = "0.11"
bytes = "1"
tracing = "0.1"
tracing-subscriber = {version = "0.2", features = ["parking_lot"]}
#TODO full is not needed here 
hyper = {version = "0.14", features = ["full"]}
warp = "0.3"
tower-http = { version = "0.1", features = ["full"]}
tower = {version =  "0.4.5", features = ["full"]}
url = "0.2"
anyhow = "1"
num_cpus = "1"
# No need for encrpyted allocations imo
mimalloc = {version = "0.1", default-features = false}
config = "0.11"
#chrono = {version = "0.4", default-features = false, features = ["serde"]}
parse-size = "1"
serde = "1"
serde-aux = "2.1"

 
[dev-dependencies]
reqwest = {version = "0.11", features = ["gzip" ]}
lazy_static = "1"
tokio = {version = "1.5", features = ["full", "test-util"]}
