[package]
name = "memster"
version = "0.1.0"
authors = ["oskarn <oskarn@spotify.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1

[dependencies]
tokio = {version = "1.6", features = ["rt-multi-thread", "macros", "parking_lot", "net", "time", "io-std"]}
parking_lot = "0.11"
bytes = "1"
tracing = "0.1"
tracing-subscriber = {version = "0.2", features = ["parking_lot"]}
hyper = {version = "0.14", features = ["http1", "http2", "server", "stream"]}
warp = "0.3"
tower-http = { version = "0.1", features = ["sensitive-headers", "set-header", "trace", "compression", "add-extension"]}
tower = {version =  "0.4", features = ["full"]}
anyhow = "1"
num_cpus = "1"
# No need for encrpyted allocations imo
mimalloc = {version = "0.1", default-features = false}
config = "0.11"
parse-size = "1"
serde = "1"
serde-aux = "2.1"

 
[dev-dependencies]
reqwest = {version = "0.11", features = ["gzip" ]}
lazy_static = "1"
tokio = {version = "1.5", features = ["full", "test-util"]}
